# lygo-claw

./: .gitignore  LICENSE  NOTICE  README.md  START_HERE.txt  pyproject.toml
champions/HermesSentinel/: system_prompt.txt
champions/LYRA/: system_prompt.txt
champions/Lightfather/: system_prompt.txt
champions/Sancora/: system_prompt.txt
champions/_template/: skill_pack.json  system_prompt.txt
config/: sovereign_defaults.json
docs/: ARCHITECTURE.md  COMMANDS.md  GITHUB_CREATE.md  LYGO_INTEGRATION.md  LYGO_USB_AND_CLAW_MASTER_WHITEPAPER.md  QUICKSTART_FOR_HUMANS.md  TROUBLESHOOTING.md  UPSTREAM_OPENCLAW.md  USB_PUBLIC_RELEASE.md  USB_SUPERVISOR.md
launchers/: INSTALL_AND_CHECK.bat  RUN_SOVEREIGN_LOOP.bat  TRY_GATEWAY.bat
releases/: PUBLIC_RELEASE_MANIFEST.json
scripts/: create_usb_release_zip.ps1  join_usb_release.ps1  package_usb_claw_public.ps1  self_check.py  split_usb_release.ps1  vendor_openclaw.ps1  verify_usb_claw_public.py
src/lygo_claw/: README.md  __init__.py  anchor.py  champion_loader.py  cli.py  consensus.py  framework.py  gatekeeper.py  gateway.py  godmode_brain.py  harmony.py  hermes_audit.py  limbs.py  memory.py  sovereign_loop.py  usb_supervisor.py
tests/: test_gatekeeper.py  test_gateway.py
usb/: LYGO_CLAW_Launch.bat  LYGO_Gateway.cmd  LYGO_Gateway.ps1  LYGO_Ollama_USB_Boot.bat  LYGO_Ollama_USB_Boot.ps1  PUBLIC_ANCHOR.md  README.txt  START_HERE_USB.txt
usb/dashboard/: lygo-claw.html
usb/lygo-claw/: lygo.json
usb/models/: DOWNLOAD_WEIGHTS.txt  MODEL_MANIFEST.json  STANDALONE_MODEL_DESIGN.md
usb/product/: DOWNLOAD_OLLAMA.txt
(+4 files in other folders)
