[project]
name = "lygo-claw"
version = "1.0.0"
description = "LYGO-Claw — sovereign-hardened agent gateway (P0, Hermes, USB supervisor, Champion personas)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Justin Helmer / Excavationpro" }]

[project.scripts]
lygo-claw = "lygo_claw.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]